--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
